--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "dev": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "live-server": "^1.2.2",
     "typescript": "^5.6.2"
   }
 }
